--- a/package.json
+++ b/package.json
@@ -2,18 +2,36 @@
   "name": "gulp-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "",
-  "devDependencies": {
-    "coffee-script": "^1.9.0",
-    "gulp": "^3.8.10",
-    "gulp-coffee": "^2.3.1",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-slim": "0.0.13"
-  },
+  "main": "index.js",
   "scripts": {
-    "bootstrap": "gem install slim sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": [],
+  "license": "ISC",
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "browserify": "^8.1.3",
+    "coffee-script": "^1.9.1",
+    "coffeeify": "^1.0.0",
+    "debowerify": "^1.2.0",
+    "decomposer": "^1.0.0",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-awspublish": "^1.0.1",
+    "gulp-concat": "^2.5.1",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^0.4.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-slim": "0.0.13",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.1",
+    "gulp-webserver": "^0.9.0",
+    "require-dir": "^0.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "yargs": "^3.1.0"
+  }
 }
