--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "gulp-starter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Starter kit of Gulp for web development",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "$(npm bin)/gulp build",
+    "build-production": "$(npm bin)/gulp build --production"
   },
-  "author": [],
-  "license": "ISC",
+  "author": [
+    "Yasuaki Uechi <uetchy@randompaper.co"
+  ],
+  "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^8.1.3",
@@ -21,10 +23,10 @@
     "gulp-awspublish": "^1.0.1",
     "gulp-concat": "^2.5.1",
     "gulp-if": "^1.2.5",
+    "gulp-jade": "^1.0.0",
     "gulp-minify-css": "^0.4.6",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
-    "gulp-slim": "0.0.13",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
