--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
+    "browser-sync": "^2.6.9",
     "browserify": "^8.1.3",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
@@ -30,7 +31,6 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
-    "gulp-webserver": "^0.9.0",
     "require-dir": "^0.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
