--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-starter",
+  "name": "web-starter",
   "version": "1.0.0",
   "description": "Starter kit of Gulp for web development",
   "scripts": {
@@ -13,27 +13,26 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^2.6.9",
-    "browserify": "^8.1.3",
+    "browserify": "^10.0.0",
     "coffee-script": "^1.9.1",
-    "coffeeify": "^1.0.0",
+    "coffeeify": "^1.1.0",
     "debowerify": "^1.2.0",
     "decomposer": "^1.0.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-awspublish": "^1.0.1",
     "gulp-concat": "^2.5.1",
     "gulp-if": "^1.2.5",
     "gulp-jade": "^1.0.0",
     "gulp-minify-css": "^0.4.6",
-    "gulp-rename": "^1.2.0",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
-    "require-dir": "^0.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
+    "watchify": "^3.2.1",
     "yargs": "^3.1.0"
   }
 }
