--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-# Logs
+logs
 *.log
-
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 bower_components
-
-# dist
-public
+public/*
+!public/images
