--- a/package.json
+++ b/package.json
@@ -3,35 +3,47 @@
   "version": "1.0.0",
   "description": "Starter kit of Gulp for web development",
   "scripts": {
-    "build": "$(npm bin)/gulp build",
-    "build-production": "$(npm bin)/gulp build --production"
+    "build": "$(npm bin)/gulp build --production"
   },
   "author": [
     "Yasuaki Uechi <uetchy@randompaper.co"
   ],
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "browser-sync": "^2.6.9",
-    "browserify": "^10.0.0",
-    "coffee-script": "^1.9.1",
+    "bower": "^1.4.1",
+    "browser-sync": "^2.7.1",
+    "browserify": "^10.2.0",
+    "browserify-shim": "^3.8.6",
+    "coffee-script": "^1.9.2",
     "coffeeify": "^1.1.0",
-    "debowerify": "^1.2.0",
-    "decomposer": "^1.0.0",
+    "debowerify": "^1.2.1",
+    "decomposer": "^1.0.1",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-concat": "^2.5.1",
+    "gulp-autoprefixer": "^2.2.0",
+    "gulp-awspublish": "^2.0.0",
+    "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
     "gulp-jade": "^1.0.0",
-    "gulp-minify-css": "^0.4.6",
+    "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.1.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1",
-    "yargs": "^3.1.0"
+    "yargs": "^3.9.0"
+  },
+  "dependencies": {
+    "domready": "^1.0.8",
+    "jquery": "^2.1.4",
+    "moment": "^2.10.3",
+    "velocity-animate": "^1.2.2"
+  },
+  "browserify-shim": {
+    "jquery": "$"
   }
 }
