--- a/package.json
+++ b/package.json
@@ -3,43 +3,43 @@
   "version": "1.0.0",
   "description": "Starter kit of Gulp for web development",
   "scripts": {
-    "build": "$(npm bin)/gulp build --production"
+    "build": "gulp build --production"
   },
   "author": [
-    "Yasuaki Uechi <uetchy@randompaper.co"
+    "Yasuaki Uechi <y@uechi.io>"
   ],
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.4.1",
     "browser-sync": "^2.7.1",
-    "browserify": "^10.2.0",
+    "browserify": "^15.2.0",
     "browserify-shim": "^3.8.6",
     "coffee-script": "^1.9.2",
-    "coffeeify": "^1.1.0",
+    "coffeeify": "^3.0.1",
     "debowerify": "^1.2.1",
     "decomposer": "^1.0.1",
-    "del": "^1.1.1",
+    "del": "^3.0.0",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.2.0",
-    "gulp-awspublish": "^2.0.0",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-awspublish": "^3.3.0",
     "gulp-concat": "^2.5.2",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.2",
     "gulp-jade": "^1.0.0",
     "gulp-minify-css": "^1.1.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "^3.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.2.1",
-    "yargs": "^3.9.0"
+    "yargs": "^11.0.0"
   },
   "dependencies": {
     "domready": "^1.0.8",
-    "jquery": "^2.1.4",
+    "jquery": "^3.3.1",
     "moment": "^2.10.3",
     "velocity-animate": "^1.2.2"
   },
